# job-queue

./: .gitignore  .gitlab-ci.yml  .readthedocs.yml  LICENSE  NEWS.rst  README.rst  noxfile.py  pyproject.toml  requirements-rtd.txt  setup.cfg  tox.ini
.github/workflows/: nox.yml
doc/: api.rst  conf.py  contributing.rst  index.rst  release-process.rst
src/jobq/: __init__.py
src/parq/: __init__.py  version.py
tests/: test_ctrl_c.py  test_exceptions.py  test_invalid_args.py  test_job_queue.py  test_kill_worker.py  test_queue_buffer.py  test_results.py  test_run.py
