[metadata]
name = parq
version = 0.2.0
url = https://bitbucket.org/robmoss/job-queue/
project_urls =
    Documentation = https://parq.readthedocs.io/en/latest/
    Changelog = https://parq.readthedocs.io/en/latest/changelog.html
description = A multi-process job queue
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License
license_files = LICENSE
author = Rob Moss
author_email = rgmoss@unimelb.edu.au
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics

[options]
python_requires = >= 3.7
zip_safe = True
packages = find:
package_dir =
    = src

[options.packages.find]
where = src

[build_sphinx]
source-dir = doc
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
